Resolve "Share button on mobile environment"

--- a/frontend/src/app/users/post-detail-card/post-detail-card.component.css
+++ b/frontend/src/app/users/post-detail-card/post-detail-card.component.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-grow: 1;
   align-self: center;
-  padding: 5px !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
 }
 
 .user-profile {
@@ -18,10 +19,6 @@
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 10px;
-}
-
-.post-footer {
-  padding: 5px !important;
 }
 
 .post-form {
